--- a/src/scss/ui-kit/_input.scss
+++ b/src/scss/ui-kit/_input.scss
@@ -11,9 +11,9 @@
   background-color: var(--color-none);
   padding         : 16px;
   padding-left    : var(--size-lg);
-  border-bottom   : 1px solid var(--color-white-60);
+  border-bottom   : 1px solid var(--color-black-60);
   transition      : 0.2s ease;
-  user-select     : none;
+  user-select     : initial;
 
   &-cover {
     display: flex;
@@ -25,11 +25,11 @@
   }
 
   &:not(&--error):focus {
-    border-color: var(--color-grey);
+    border-color: var(--color-black);
   }
 
   &::placeholder {
-    color: var(--color-white-60);
+    color: var(--color-black-60);
   }
 
   &:disabled {
