--- a/src/scss/ui-kit/_reset.scss
+++ b/src/scss/ui-kit/_reset.scss
@@ -79,9 +79,9 @@ select {
     &,
     &:hover,
     &:focus {
-      -webkit-text-fill-color: var(--color-white);
+      -webkit-text-fill-color: var(--color-black);
       box-shadow             : inset 0 0 0 1000px var(--color-none);
-      border-bottom          : 1px solid var(--color-white);
+      border-bottom          : 1px solid var(--color-black);
       transition             : background-color 5000s ease-in-out 0s;
     }
   }
