--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -25,11 +25,12 @@
   
   <!-- Шапка документа -->
 
-  <header class="header container flex align-center justify-between gap-10 fixed zi-3 bg-white py-4 linear duration-3" data-header data-theme="light">
-    <a class="logo btn btn--black mr-auto" data-waved="light" href="/">
+  <header class="header container flex align-center justify-between gap-5 fixed zi-3 bg-white py-4 linear duration-3" data-header data-theme="light">
+    <a class="logo btn btn--black" data-waved="light" href="/">
       <img class="w-100" src="img/pictures/logo.svg" alt="">
     </a>
-    <div class="d-none d-lg-flex align-center gap-10">
+    <input class="switch switch--toggle d-none d-lg-block" data-theme="toggle" type="checkbox">
+    <div class="d-none d-lg-flex align-center gap-5">
       <a class="btn btn--black text-18 bold-4 p-1" data-waved="light" data-scroll="top" href="">Программы</a>
       <a class="btn btn--black text-18 bold-4 p-1" data-waved="light" data-scroll="top" href="">Стоимость</a>
     </div>
