--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -1,11 +1,11 @@
     <!-- Подвал -->
 
-    <footer class="footer container flex flex-wrap align-center justify-between gap-5 bg-grey pt-5 pb-10 pb-md-5">
+    <footer class="footer container flex flex-wrap align-center justify-between gap-5 bg-grey pt-5 pb-10 pb-md-5" data-theme="light">
       <a class="logo btn btn--white" data-waved="dark" href="/">
         <img class="w-100" src="img/pictures/logo.svg" alt="">
       </a>
       <a class="btn btn--black link text-18 text-md-20 text-lg-22 bold-4 lh-1 p-1" data-waved="light" href="mailto: info@energelica.ru">info@energelica.ru</a>
-      <p class="text-18 text-md-20 text-lg-22 bold-6">Часы работы: Пн-Вс, 9:00-20:00</p>
+      <p class="color-black text-18 text-md-20 text-lg-22 bold-6">Часы работы: Пн-Вс, 9:00-20:00</p>
       <div class="flex align-center">
         <div class="flex align-center gap-2 mr-3 mr-md-6">
           <a class="footer__btn footer__btn--wa btn btn--primary btn--fill radius-2" data-waved="light" href="" target="_blank">
