--- a/src/scss/frontend/_main.scss
+++ b/src/scss/frontend/_main.scss
@@ -2,15 +2,6 @@
 .main {
   min-height: 940px;
 
-  &__blur {
-    top : 100px;
-    left: -200px;
-  }
-
-  &__title {
-    background-color: var(--color-white-10);
-  }
-
   @media(max-width: $lg) {
     & {
       min-height: 700px;
@@ -32,11 +23,53 @@
 
 // Каталог
 .catalog {
+  &__bg {
+    &::after {
+      content   : "";
+      position  : absolute;
+      inset     : 0;
+      transition: 0.3s ease;
+      background: linear-gradient(90deg, var(--color-primary) 0%, var(--color-none) 100%);
+      opacity   : 0.7;
+    }
+  }
 
-  @media(min-width: $md) {
+  &__content {
+    max-width : 440px;
+    min-height: 375px;
+  }
+
+  &__info {
+    transform : scale(0);
+    visibility: hidden;
+  }
+
+  @media(hover) {
+    &__item:hover &__bg::after {
+      opacity: 1;
+    }
+
+    &__item:hover &__info {
+      transform : scale(1);
+      opacity   : 1;
+      visibility: visible;
+    }
+
+    &__item:hover &__title {
+      transform: translateY(200px);
+    }
+  }
+
+  @media(max-width: $md) {
+    &__bg {
+      &::after {
+        opacity: 1;
+      }
+    }
+
     &__content {
-      max-width : 400px;
-      min-height: 375px;
+      max-width : 100%;
+      min-height: 220px;
     }
   }
 }
@@ -208,7 +241,7 @@
   }
 
   &__item {
-    background-color: var(--color-white-30);
+    background-color: var(--color-white-10);
   }
 
   @media (min-width: 2000px) {
@@ -237,23 +270,12 @@
 
 // Преимущества
 .advantages {
-
-  @media(min-width: $lg) {
-    &__gap {
-      gap: 52px;
-    }
+  &__item:nth-child(odd) &__pack {
+    background: linear-gradient(180deg, var(--color-none) 0%, var(--color-grey-50) 100%);
   }
 
-  @media(max-width: $lg) {
-    &__items {
-      flex-direction: row;
-    }
-  }
-
-  @media(max-width: $md) {
-    &__items {
-      flex-direction: column;
-    }
+  &__item:nth-child(even) &__pack {
+    background: linear-gradient(180deg, var(--color-grey-50) 0%, var(--color-none) 100%);
   }
 }
 
@@ -341,6 +363,10 @@
     transform: rotate(180deg);
   }
 
+  &__bottom {
+    background-color: var(--color-blue-10);
+  }
+
   @media (min-width: 2000px) {
     &__bg {
       max-width: 1920px;
@@ -350,6 +376,13 @@
 
 // Вопросы
 .questions {
+  &__item {
+    &--blue {
+      background-color   : var(--color-blue-10);
+      border-bottom-color: var(--color-blue-60);
+    }
+  }
+
   @media(max-width: $lg) {
     &__items {
       flex-direction: row;
