--- a/src/scss/frontend/_templates.scss
+++ b/src/scss/frontend/_templates.scss
@@ -76,29 +76,6 @@ body.load-complete .preloader {
   }
 }
 
-// Размытие
-.blur {
-  position        : absolute;
-  top             : -350px;
-  width           : 700px;
-  height          : 330px;
-  filter          : blur(200px);
-  background-color: currentColor;
-  animation       : blur 5s linear both infinite;
-}
-
-@keyframes blur {
-
-  0%,
-  100% {
-    opacity: 0.3;
-  }
-
-  50% {
-    opacity: 0.7;
-  }
-}
-
 // Подвал
 .footer {
   &__btn {
@@ -124,6 +101,14 @@ body.load-complete .preloader {
 
 // Модальное окно
 .dialog {
+  &--detail {
+    width: 360px;
+  }
+
+  &__pack {
+    padding-top: 30%;
+  }
+
   @media(min-width: $lg) {
 
     &--politics,
