--- a/src/scss/ui-kit/_switch.scss
+++ b/src/scss/ui-kit/_switch.scss
@@ -96,6 +96,10 @@
       transition      : left 0.5s ease, right 0.4s ease 0.2s;
     }
 
+    &:checked {
+      border-color: currentColor;
+    }
+
     &:checked::after {
       left            : 50px;
       right           : 4px;
