--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -22,7 +22,12 @@
         <a class="btn btn--white link font-alt text-22 bold-7 p-1" data-waved="dark" href="tel: 8 918 323 11 22">8 918 323 11 22</a>
       </div>
     </footer>
-
+    <footer class="footer-bottom container bg-primary">
+      <div class="footer-bottom-inner">
+        <a href="https://stdkit.ru/" target="_blank" class="footer-bottom-link">Разработка сайта: Студия К.И.Т.</a>
+        <div class="footer-bottom-year">© <?= date('Y') ?></div>
+      </div>
+    </footer>
   </div>
 </div>
 
